# airlab_stocking_challenge_2021

./: Dockerfile  README.md
0 Final files for submission/: README.md  link_to_video.md
competition_docker/: Dockerfile
darknet/: .gitignore  train.sh
darknet/dataset/: .gitignore  README.txt
darknet/net/cfg/: dataset.data
docker/: Dockerfile  README.md  join.bash  run.bash
docker_darknet/: Dockerfile  README.md  build.bash  join.bash  run.bash
docker_sim/: Dockerfile  build.bash
retail_store_simulation/launch/: tiago_simulation.launch
retail_store_simulation/models/empty_cabinet_1/: model.config  model.sdf
retail_store_simulation/models/empty_cabinet_2/: model.config  model.sdf
retail_store_simulation/models/standard_can_fit/: model.sdf  standard_can.blend  standard_can.blend1  standard_can_fit.dae  standard_can_fit_old.dae
retail_store_simulation/scripts/: cp_to_opt.sh
retail_store_simulation/worlds/: stocking_challenge.world  stocking_challenge_test.world
workspace/: CHANGELOG.md
workspace/ekumen/ek_challenger/: CMakeLists.txt  package.xml
workspace/ekumen/ek_challenger/config/: backtracking_test.xml  can_tray.xml  competition_mode.xml  competition_mode_backup.xml  gripper_control_test.xml  head_control.xml  main_tree.xml  pick_and_place_parallel.xml  preset_arm_poses.xml  preset_arm_poses_parallel.xml  scan_shelves.xml  scan_shelves_2.xml  scan_table.xml  sensors_3d.yaml  simple_gripper_control.xml  torso_control_test.xml  yolov4-airlab.yaml
workspace/ekumen/ek_challenger/include/ek_challenger/: arm_joints_pose.hpp  bt_challenger.hpp  collision_object_manager.hpp  data_conversions.hpp  ros_frame_transformer.hpp  shelf_scanner.hpp  shelf_scanner_node.hpp  table_scanner.hpp  table_scanner_node.hpp  task_constructor_node.hpp  tomato_can_dimensions.hpp  tray_data.hpp  tray_finder.hpp  tray_model_backtray.hpp  tray_model_generic.hpp  tray_model_impl.hpp  tray_model_interface.hpp  tray_model_table.hpp
workspace/ekumen/ek_challenger/include/ek_challenger/nodes/: backtrack_action_node.hpp  clear_octomaps_action_node.hpp  clear_shelf_obstacles_action_node.hpp  create_obstacle_action_node.hpp  get_arm_joints_for_pose_action_node.hpp  gripper_control_action_node.hpp  head_control_action_node.hpp  move_base_action_node.hpp  pause_action_node.hpp  pick_and_place_action_node.hpp  scan_shelves_action_node.hpp  scan_table_get_results_action_node.hpp  scan_table_start_scanning_action_node.hpp  set_arm_joints_pose_action_node.hpp  torso_control_action_node.hpp  tray_pick_empty_locus_action_node.hpp  tray_pick_occupied_locus_action_node.hpp  tray_release_locus_action_node.hpp  tray_set_loci_action_node.hpp  tray_set_locus_state_action_node.hpp  tray_update_planning_scene_action_node.hpp
workspace/ekumen/ek_challenger/include/ek_challenger/tasks/: pick_place_task.hpp
workspace/ekumen/ek_challenger/launch/: autonomy.launch  darknet.launch  ek_challenger.launch  move_group.launch  octomap_server.launch  sensor_manager.launch.xml
workspace/ekumen/ek_challenger/src/: bt_challenger.cpp  collision_object_manager.cpp  ek_challenger_node_runner.cpp  ros_frame_transformer.cpp  shelf_scanner.cpp  shelf_scanner_node.cpp  shelf_scanner_node_runner.cpp  table_scanner.cpp  table_scanner_node.cpp  table_scanner_node_runner.cpp  task_constructor_node.cpp  task_constructor_node_runner.cpp  tray_finder.cpp  tray_model_impl.cpp
workspace/ekumen/ek_challenger/src/nodes/: backtrack_action_node.cpp  create_obstacle_action_node.cpp  get_arm_joints_for_pose_action_node.cpp  gripper_control_action_node.cpp  head_control_action_node.cpp  move_base_action_node.cpp  pause_action_node.cpp  pick_and_place_action_node.cpp  set_arm_joints_pose_action_node.cpp  torso_control_action_node.cpp
workspace/ekumen/ek_challenger/src/tasks/: pick_place_task.cpp
workspace/ekumen/ek_challenger/srv/: ScanShelves.srv  ScanTable.srv  TaskConstructorPlan.srv
workspace/ekumen/ek_dataset_studio/: CMakeLists.txt  package.xml
workspace/ekumen/ek_dataset_studio/include/ek_dataset_studio/: light_direction_control_plugin.hpp
workspace/ekumen/ek_dataset_studio/launch/: dataset_studio.launch
workspace/ekumen/ek_dataset_studio/models/dataset_studio_camera/: model.config  model.sdf
workspace/ekumen/ek_dataset_studio/models/dataset_studio_wall/: model.config  model.sdf
workspace/ekumen/ek_dataset_studio/models/dataset_studio_wall/materials/scripts/: random_noise_wall.material
workspace/ekumen/ek_dataset_studio/src/: light_direction_control_plugin.cpp  photographer.py
workspace/ekumen/ek_dataset_studio/srv/: LightDirectionControl.srv
workspace/ekumen/ek_dataset_studio/worlds/: dataset_studio.world
workspace/ekumen/ek_utils/: CMakeLists.txt  package.xml  setup.py
workspace/ekumen/ek_utils/config/: tiago_moveit.rviz  tiago_nav2d.rviz
workspace/ekumen/ek_utils/launch/: joystick.launch  joystick_teleop.launch  rviz.launch  rviz_tiago_moveit.launch  rviz_tiago_nav2d.launch
workspace/ekumen/ek_utils/scripts/: moveit_joy.py
workspace/ekumen/ek_utils/src/ek_utils/: moveit_joy_module.py
